Changes with APR-util 1.2.9

  *) Portably implement testdate's long-time constants to solve
     compilation faults where #LL isn't valid.  [Curt Arnold]

  *) APR_FIND_APU macro no longer checks /usr/local/apache2/.
     PR 42089.  [Colm MacCarthaigh]

  *) Fix handling of attribute namespaces in apr_xml_to_text() when
     a namespace map is provided.  PR 41908.  [Joe Orton]

Changes with APR-util 1.2.8

  *) Add support for Berkeley DB 4.5 to the configure scripts.
     [Garrett Rooney]

  *) Allow apr_queue.h to be included before other APR headers.
     PR 40891 [Henry Jen <henryjen ztune.net>]

  *) Provide folding in autogenerated .manifest files for Win32 builders
     using VisualStudio 2005  [William Rowe]

  *) Implement prepared statement support in SQLite3 DBD driver
     [Bojan Smojver]

  *) Fix to ensure that "deprecated" LDAP interfaces are still 
     exposed if using OpenLDAP 2.3.  [Joe Orton]

  *) Fix incorrect byte order and incorrect timestamp type
     in the fallback UUID generator used when no external UUID
     generator is detected by APR.  PR 37342.  [Max Bowsher]

Changes with APR-util 1.2.7

  *) Fix apr_dbd_init to be safe to call multiple times
     [Bojan Smojver <bojan rexursive com>, Nick Kew]

  *) Win32 / Netware - add missing apu_version.c for apu_version_string()
     to the Windows and Netware specific builds.  Unix platforms supported
     this API since 0.9.1.  [William Rowe, Brad Nicholes].

Changes with APR-util 1.2.6

  *) Stop trying to link against Berkeley DB by default.  To enable use
     of Berkeley DB users must now explicitly pass --with-berkeley-db to
     configure, since Berkeley DB is released under a viral license that
     requires distribution of source code for any program that uses it.
     [Garrett Rooney]

  *) Stop trying to link against GDBM by default.  To enable use of GDBM
     users must now explicitly pass --with-gdbm to configure, since GDBM
     is licensed under the GPL.